// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routes should not render the protected routes when user is not logged in 1`] = `
<Switch>
  <Route
    component={[Function]}
    exact={true}
    path="/"
  />
  <Route
    component={[Function]}
    path="/login"
  />
  <Redirect
    push={false}
    to="/login"
  />
</Switch>
`;

exports[`Routes should render all the routes when user is logged in 1`] = `
<Switch>
  <Route
    component={[Function]}
    exact={true}
    path="/"
  />
  <Route
    component={[Function]}
    path="/login"
  />
  <Layout>
    <Switch>
      <Route
        component={[Function]}
        path="/dashboard"
      />
      <Route
        component={[Function]}
        path="/layouts"
      />
      <Route
        component={[Function]}
        path="/graphs"
      />
      <Route
        component={[Function]}
        path="/mailbox"
      />
      <Route
        component={[Function]}
        path="/metrics"
      />
      <Route
        component={[Function]}
        path="/widgets"
      />
      <Route
        component={[Function]}
        path="/forms"
      />
      <Route
        component={[Function]}
        path="/app-views"
      />
    </Switch>
  </Layout>
</Switch>
`;
